--- a/composer.json
+++ b/composer.json
@@ -14,14 +14,14 @@
         }
     ],
     "require": {
-        "php": ">=5.6.0",
+        "php": "^7.4|^8.0",
         "ext-zip": "*",
-        "illuminate/support": "^5.0",
-        "illuminate/filesystem": "^5.0"
+        "illuminate/support": "^8.0",
+        "illuminate/filesystem": "^8.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.7",
-        "mockery/mockery": "^0.9.4"
+        "phpunit/phpunit": "^9.3.3",
+        "mockery/mockery": "^1.4.2"
     },
     "autoload": {
         "psr-4": {
